// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render 1`] = `
<div>
  <button
    class="Button__StyledButton-mdtvtf-0 ePkfgQ"
    type="button"
  />
</div>
`;

exports[`Button should render a large one 1`] = `
<div>
  <button
    class="Button__StyledButton-mdtvtf-0 dznQvQ"
    type="button"
  />
</div>
`;

exports[`Button should render a small one 1`] = `
<div>
  <button
    class="Button__StyledButton-mdtvtf-0 bJTcuL"
    type="button"
  />
</div>
`;

exports[`Button should render an icon 1`] = `
<div>
  <button
    class="Button__StyledButton-mdtvtf-0 cgAqkb"
    type="button"
  />
</div>
`;

exports[`Button should render as danger button 1`] = `
<div>
  <button
    class="Button__StyledButton-mdtvtf-0 jhEaCc"
    type="button"
  />
</div>
`;

exports[`Button should render as primary button 1`] = `
<div>
  <button
    class="Button__StyledButton-mdtvtf-0 ePkfgQ"
    type="button"
  />
</div>
`;

exports[`Button should render as secondary button 1`] = `
<div>
  <button
    class="Button__StyledButton-mdtvtf-0 iUSBMV"
    type="button"
  />
</div>
`;

exports[`Button should render as transparent button 1`] = `
<div>
  <button
    class="Button__StyledButton-mdtvtf-0 lnzPxq"
    type="button"
  />
</div>
`;

exports[`Button should render if disabled 1`] = `
<DocumentFragment>
  <button
    class="Button__StyledButton-mdtvtf-0 kwcZQn"
    disabled=""
    type="button"
  >
    Click
  </button>
</DocumentFragment>
`;
